Update loading logo

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         min-height: 100vh;
         margin: 0;
         padding: 0;
-        background: no-repeat center/132px url(/assets/logo.png),
+        background: no-repeat center/132px url(/assets/logo1.png),
           linear-gradient(186deg, #ff5400 -100%, #570997 80%) !important; /* override the background set by aragonUI */
       }
     </style>
