SEO Title and Description updates
Updating the main site title to make it more obvious what the site does when finding results in google. Also adding in the Meta Description so we don't pull content from the page itself (at the moment it's pulling the navigation).

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
     />
     
     <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
-    <title>NFTX</title>
+    <title>NFTX — enabling NFT Index Funds</title>
+    <meta name="description" content="With NFTX, it is possible to create and trade funds based on your favorite collectibles such as 
+                                      CryptoPunks, Axies, CryptoKitties, and Avastars, right from a DEX like SushiSwap. " />
     <style>
       html,
       body {
