--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no"
     />
-    
+    <link rel='dns-prefetch' href='//nftx.xyz' />
+    <link rel='dns-prefetch' href='//api.covalenthq.com' />
     <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
     <title>NFTX — enabling NFT Index Funds</title>
     <meta name="description" content="With NFTX, it is possible to create and trade funds based on your favorite collectibles such as 
