feat: add gallery request, fix header
Link form for fund creators to request visibility on the gallery. Fix the coming soon header to prevent double overflow scroll.

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,11 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <div style="background-image: linear-gradient(to right, #ff6d41, #ec4899); color: #fafafa; font-size: 0.75rem; line-height: 1rem;">
+      <div style="text-align: center; padding: 0.25rem 1rem; font-size: 0.8rem; line-height: 1rem;">
+        <b>Our devs are hard at work building a new and improved app experience. Stay tuned! 🦧 🕳️</b>
+      </div>
+    </div>
     <div id="root"></div>
     <script>
       // Dragons 🐉 have been reintroduced into the client, but hear us out:
