--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=no"
     />
-    <link rel='dns-prefetch' href='//nftx.xyz' />
+    <link rel='dns-prefetch' href='//nftx.ethereumdb.com' />
     <link rel='dns-prefetch' href='//api.covalenthq.com' />
-    <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="./assets/favicon-logo.png" />
     <title>NFTX — enabling NFT Index Funds</title>
     <meta name="description" content="With NFTX, it is possible to create and trade funds based on your favorite collectibles such as 
                                       CryptoPunks, Axies, CryptoKitties, and Avastars, right from a DEX like SushiSwap. " />
@@ -22,6 +22,16 @@
           linear-gradient(186deg, #ff5400 -100%, #570997 80%) !important; /* override the background set by aragonUI */
       }
     </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-187802373-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-187802373-1');
+</script>
+
   </head>
   <body>
     <noscript>
