--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     />
     <link rel='dns-prefetch' href='//nftx.ethereumdb.com' />
     <link rel='dns-prefetch' href='//api.covalenthq.com' />
-    <link rel="shortcut icon" type="image/png" href="./assets/favicon-logo.png" />
+    <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
     <title>NFTX — enabling NFT Index Funds</title>
     <meta name="description" content="With NFTX, it is possible to create and trade funds based on your favorite collectibles such as 
                                       CryptoPunks, Axies, CryptoKitties, and Avastars, right from a DEX like SushiSwap. " />
